# NIR-PRojects

./: .gitignore  README.md
examples/B1/: exampleB1.cc  run2.mac
examples/field2/: CMakeLists.txt  GNUmakefile  README  Spec_KON.root  field2.cc  makefile  particleGun.cc  run.mac  vis.mac  vis1.mac
examples/field2/include/: HistoManager.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh
examples/field2/src/: .KonField.cc.swp  ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  FieldSetup.cc  HistoManager.cc  KonField.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction1.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc  TrackingAction.cc
examples/kon1/: CMakeLists.txt  kon1.cc  vis.mac
examples/kon1/include/: DetectorConstruction.hh  Run.hh  SensitiveDetector.hh
examples/kon1/src/: DetectorConstruction.cc  DetectorConstruction.hh  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc
projects/ion_bp/ion_bp/: CMakeLists.txt  GNUmakefile  ion_bp.cc  makefile_old  run.mac  runTASK.sh  vis.mac  visHEP.mac
projects/ion_bp/ion_bp/Plots/: Deposit_energy.C  Deposit_energy.C~  SourceHitMap.C  ThresholdNew.C  helpers.cpp  helpers.h
projects/ion_bp/ion_bp/data/: Histos_delta.C  Histos_delta.C~  bp_helium_hist.root  bp_helium_tree.root  bp_vac_hist.root  bp_vac_tree.root
projects/ion_bp/ion_bp/include/: ActionInitialization.hh~  EventAction.hh  EventAction.hh~  FieldMessenger.hh  FieldSetup.hh  HistoManager.hh  HistoManager.hh~  KonField.hh  KonField.hh~  PrimaryGeneratorAction.hh  PrimaryGeneratorAction.hh~  PrimaryGeneratorMessenger.hh  PrimaryGeneratorMessenger.hh~  RunAction.hh~  SensitiveDetector.hh  (+1 more)
projects/ion_bp_plus_mpc_detector/kon1/: CMakeLists.txt  kon1.cc
projects/ion_bp_plus_mpc_detector/kon1/Plots/: Deposit_energy.C~  Plot1.C  spectrum.dat~
projects/ion_bp_plus_mpc_detector/kon1/include/: EventAction.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh
projects/ion_bp_plus_mpc_detector/kon1/src/: ActionInitialization.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc
projects/mpc_detector/kon1/: kon1.cc  makefile  vis.mac
projects/muon_flight/kon1/: CMakeLists.txt  kon1.cc
projects/radioactive_decay/kon1/: .kon1.cc.swp  GNUmakefile  kon1.cc  visHEP.mac
projects/radioactive_decay/rdecay01/: CMakeLists.txt  rdecay01.cc  vis.mac
(+60 files in other folders)
